--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,11 +8,11 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <% if (username === undefined) { %>
+        <% if (!user) { %>
         <form class="form-inline ml-auto" action="/login" method="POST">
           <div class="form-group mb-2">
-            <label for="username"></label>
-            <input class="form-control" type="text" name="username" placeholder="Username"
+            <label for='email'></label>
+            <input class="form-control" type="text" name='email' placeholder='email'
               style="width: 250px; margin: 1em">
             <button type="submit" class="btn btn-outline-dark">Login</button>
           </div>
@@ -20,7 +20,7 @@
         <% } else { %>
           <form class="form-inline ml-auto" action="/logout" method="POST">
             <div class="form-group mb-2">
-              <label for="username" style=" margin: 1em">Logged in as: <%= username %>!</label>
+              <label for='user_id' style=" margin: 1em">Logged in as: <%= user.email %>!</label>
               <button type="submit" class="btn btn-outline-dark">Logout</button>
             </div>
           </form>
