returning 400 error if one field is not fill up or if the email was previously registered

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,7 +16,7 @@
       </div>
       <div class="card-footer text-muted">
         <h2>Edit</h2>
-        <form class="form-inline justify-content-center action="/urls/<%= shortURL %>" method="POST">
+        <form class="form-inline justify-content-center" action="/urls/<%= shortURL %>" method="POST">
           <label for="longURL">new URL:
           <input class="form-control" type="text" name="longURL" value= "<%= longURL %>"/>
            
