--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,6 +17,11 @@
             <button type="submit" class="btn btn-outline-dark">Login</button>
           </div>
         </form>
+        <form class="form-inline ml-auto" action="/register" method="GET">
+          <div class="form-group mb-2">
+            <button type="submit" class="btn btn-outline-dark">Register</button>
+          </div>
+        </form>
         <% } else { %>
           <form class="form-inline ml-auto" action="/logout" method="POST">
             <div class="form-group mb-2">
