--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,20 +8,11 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        
         <% if (!user) { %>
-        <form class="form-inline ml-auto" action="/login" method="POST">
-          <div class="form-group mb-2">
-            <label for='email'></label>
-            <input class="form-control" type="text" name='email' placeholder='email'
-              style="width: 250px; margin: 1em">
-            <button type="submit" class="btn btn-outline-dark">Login</button>
-          </div>
-        </form>
-        <form class="form-inline ml-auto" action="/register" method="GET">
-          <div class="form-group mb-2">
-            <button type="submit" class="btn btn-outline-dark">Register</button>
-          </div>
-        </form>
+          <a class="nav-item nav-link" href="/login">Login</a> 
+          <a class="nav-item nav-link" href="/register">Register</a>
+          
         <% } else { %>
           <form class="form-inline ml-auto" action="/logout" method="POST">
             <div class="form-group mb-2">
